add course detail

--- a/course.html
+++ b/course.html
@@ -306,18 +306,18 @@
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="course__box">
-                    <img src="/images/course_2.png" alt="course_2" width="100%">
+                    <img src="/images/course2.jpg" alt="course_2" width="100%" class="specialist_border_radius">
                     <p class="course__text">หลักสูตร นักบินโดรน ตรวจสอบแผงโซล่าเซลล์ (Drone for Solar PV Inspection)</p>
                     <div class="bottom__line"></div>
                     <div class="d-flex-align gap-2">
                         <div class="flex__price__button">
                             <div class="price__button">
-                                25,000.-
+                                20,000.-
                             </div>
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">รายละเอียดคอร์ส</a> 
+                               <a href="solar_pv.html">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
@@ -330,18 +330,18 @@
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="course__box">
-                    <img src="/images/course_3.png" alt="course_3" width="100%">
-                    <p class="course__text">หลักสูตร นักบินโดรน ถ่ายภาพความร้อน ระดับ 1 (Drone Level 1nfrared Thermography)</p>
+                    <img src="/images/course_2.png" alt="course_2" width="100%">
+                    <p class="course__text">หลักสูตร นักบินโดรน ถ่ายภาพความร้อน ระดับ 1 (Drone Level Infrared Thermography)</p>
                     <div class="bottom__line"></div>
                     <div class="d-flex-align gap-2">
                         <div class="flex__price__button">
                             <div class="price__button">
-                                25,000.-
+                                20,000.-
                             </div>
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">รายละเอียดคอร์ส</a> 
+                               <a href="infrared_thermo.html">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
@@ -386,12 +386,12 @@
                     <div class="d-flex-align gap-2">
                         <div class="flex__price__button">
                             <div class="price__button">
-                                25,000.-
+                                15,000.-
                             </div>
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">รายละเอียดคอร์ส</a> 
+                               <a href="lidar.html">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
@@ -415,7 +415,7 @@
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">รายละเอียดคอร์ส</a> 
+                               <a href="threed.html">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
