--- a/solar_pv.html
+++ b/solar_pv.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/faq.css">
     <link rel="stylesheet" href="/css/course_detail.css" />
+    <link rel="stylesheet" href="/css/solar_pv.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Drone Project</title>
@@ -90,13 +91,13 @@
                         </li>
                         <li class="nav-link margin__left" style="--i: 1.35s;">
                             <i class="ri-shopping-cart-2-fill red-cart"></i>
-                       </li>
-                       <li class="nav-link" style="--i: 1.35s">
-                           <select class="form-select">
-                               <option selected>TH</option>
-                               <option value="1">EN</option>
-                           </select>
-                      </li>
+                        </li>
+                        <li class="nav-link" style="--i: 1.35s">
+                            <select class="form-select">
+                                <option selected>TH</option>
+                                <option value="1">EN</option>
+                            </select>
+                        </li>
                     </ul>
                 </div>
 
@@ -116,7 +117,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-8">
-                <p class="title__main">หลักสูตร นักบินโดรน ขั้นพื้นฐาน (Drone for Beginners)</p>
+                <p class="title__main">หลักสูตร นักบินโดรน ตรวจสอบแผงโซล่าเซลล์ (Drone for Solar PV Inspection)</p>
                 <div class="d-flex flex-row">
                     <div>
                         <img src="/images/teacher.png" alt="teacher" class="mt-3 teacher__width">
@@ -128,17 +129,15 @@
                     <div class="vertical__line"></div>
                     <div class="teacher__name">
                         <p class="teacher__text" style="font-weight: 600;">Categories:</p>
-                        <p class="teacher__text">กลุ่ม ผู้เริ่มต้น (Beginners)</p>
+                        <p class="teacher__text">กลุ่ม Drone Pilot for Professional (สำหรับมืออาชีพ)</p>
                     </div>
                 </div>
                 <div class="carousel-container">
                     <div class="carousel-main">
-                        <img id="main-image" src="/images/drone__banner__2.png" alt="drone__banner" width="100%"
-                            class="mt-3">
+                        <img id="main-image" src="/images/course2.jpg" alt="drone__banner" width="100%" class="mt-3">
                     </div>
                     <div class="carousel-thumbnails" id="thumbnails">
-                        <img src="/images/drone__banner__2.png" alt="thumbnail 1" class="thumbnail active"
-                            data-index="0">
+                        <img src="/images/course2.jpg" alt="thumbnail 1" class="thumbnail active" data-index="0">
                         <img src="/images/equipment.jpg" alt="Thumbnail 2" class="thumbnail" data-index="1">
                         <img src="/images/equipment__2.JPG" alt="Thumbnail 3" class="thumbnail" data-index="2">
                     </div>
@@ -159,7 +158,7 @@
             </div>
             <div class="col-sm-12 col-md-12 col-lg-4">
                 <div class="price__detail">
-                    <p class="price">5,500.-</p>
+                    <p class="price">20,000.-</p>
                     <button class="register__link"><a href="#">ลงทะเบียนคอร์สนี้</a></button>
                     <button class="cart__link"><a href="#"><img src="/images/cart.png" alt="cart">&nbsp;&nbsp;
                             เพิ่มลงในตะกร้า</a></button>
@@ -172,7 +171,7 @@
                                 <span>&nbsp;&nbsp;Duration</span>
                             </div>
                             <div class="col-4 col-sm-4 col-md-4">
-                                <p class="text__align">1 day</p>
+                                <p class="text__align">4 day</p>
                             </div>
                         </div>
                         <div class="row p-2">
@@ -224,20 +223,14 @@
     <div class="overlay-container mt-5">
 
         <div class="overlay-image-text">
-            <p><strong>หลักสูตร “นักบินโดรนขั้นพื้นฐานสำหรับผู้เริ่มต้น  (Drone for
-                    Beginner)”  </strong>ได้พัฒนาระบบการเรียนการสอนมุ่งเน้นความรู้ความเข้าใจเกี่ยวกับกฎหมาย ข้อบังคับ
-                และหลักการเดินอากาศ รวมถึงการใช้ห้วงอากาศ
-                สร้างพื้นฐานความรู้ความเข้าใจที่ถูกต้องทั้งภาคทฤษฎีและภาคปฏิบัติ เพื่อให้สามารถใช้งานระบบ UAS (Unmanned
-                Aircraft System)   หรือการบินโดรน (Drone) ภายในประเทศให้มีมาตรฐานมีประสิทธิภาพการบินที่ถูกต้องตามกฎหมาย
-                มีความรู้ด้านความปลอดภัยในการบินและการบำรุงรักษาอากาศยานไร้คนขับเบื้องต้น เน้นให้มีทักษะ มีความรู้
-                ความเข้าใจในการบังคับควบคุมโดรนเบื้องต้นในท่าทางที่กำหนดตามมาตรฐานสากล
-                และดำเนินการบินตามขั้นตอนปฏิบัติพื้นฐาน อีกทั้งมีความรู้เรื่อง การใช้ห้วงอากาศ ร่วมกับผู้อื่น
-                มีความสามารถในการประเมินสภาพอากาศตามหลักอุตุนิยมวิทยาก่อนทำการบิน
-                มีการตรวจสอบตัวเองและผู้ปฏิบัติงานร่วมในด้านความพร้อมสมรรถนะร่างกายก่อนทำการบินโดรน
-                มีความระแวดระวังและการตระหนักรู้เพื่อป้องกันอันตรายจากการบินโดรน
-                มีความรู้เรื่องแผนรับมือต่อสถานการณ์ฉุกเฉินเมื่อเกิดอุบัติเหตุจากโดรน สามารถเข้าใจค่าพารามิเตอร์ของโดรน
-                และตั้งค่าได้อย่างถูกต้อง มีความเข้าใจสมรรถนะของโดรน รวมถึงเทคนิคการบินโดรนให้ปลอดภัย
-                ถูกต้องตามกฎหมายที่สำนักงานการบินพลเรือน (กพท.) กำหนดไว้</p>
+            <p>ผู้เข้าร่วมฝึกอบรมสามารถเป็น <strong>ผู้ตรวจภาพความร้อนโดยใช้อากาศยานซึ่งไม่มีนักบิน “โดรน”</strong>
+                ที่มีความเข้าใจในปัญหาที่แท้จริงในงานตรวจสอบโซล่าร์เซลล์ สามารถบินอย่างถูกต้อง ถูกกฎหมาย
+                มีความน่าเชื่อถือ สามารถวิเคราะห์จุดปัญหาที่เกิดขึ้นตรงจุด
+                เข้าใจรูปแบบพฤติกรรมจุดร้อนที่มีความเสี่ยงไฟไหม้
+                วางแนวทางการแก้ไขที่ถูกต้องและสามารถลดความเสี่ยงไฟไหม้ลงได้
+                โดยครูฝึกได้ปรับปรุงหลักสูตรการฝึกอบรมให้เหมาะสม ตั้งแต่ทฤษฎีพื้นฐานการตรวจสอบ
+                ทั้งทางไฟฟ้าและทางความร้อน รวมถึงประเด็นสำคัญต่างๆ ของอากาศยานซึ่งไม่มีนักบิน “โดรน”
+                จนทำให้ผู้จบการฝึกอบรม ในหลักสูตรนี้สามารถตรวจสอบและจัดทำรายงานได้ด้วยตนเอง</p>
         </div>
     </div>
     <div class="detail">
@@ -247,14 +240,19 @@
                 <div class="col-md-12 course__text__2">คอร์สนี้เหมาะกับใคร</div>
                 <div class="col-md-12">
                     <ul class="unorder">
-                        <li>บุคคลทั่วไป ชาย/หญิง อายุ 18 ปี ขึ้นไป</li>
+                        <li>บุคคลทั่วไป นักวิชาการ นักศึกษา อายุ 18 ปี ขึ้นไป</li>
                         <li>สุขภาพกายและสุขภาพจิตดี / ต้องไม่เป็นผู้ตาบอดสี</li>
+                        <li>วิศวกร/สถาปนิก/ช่างเทคนิค</li>
+                        <li>ผู้รับเหมาโครงการ/ผู้ทำงานที่เกี่ยวข้อง</li>
+                        <li>เจ้าหน้าที่ตรวจสอบความปลอดภัย (จป. วิชาชีพ)</li>
                     </ul>
                 </div>
                 <div class="col-md-12 course__text__2">โดรนที่ใช้ในการสอน</div>
                 <div class="col-md-12">
                     <ul class="unorder">
-                        <li>DJI Mavic 3 Enterprise</li>
+                        <li>DJI Matrice 300 RTK + DJI Zenmuse H20T</li>
+                        <li>DJI Matrice 30T</li>
+                        <li>DJI Mavic 3T</li>
                     </ul>
                 </div>
             </div>
@@ -267,40 +265,25 @@
                 <div class="question__block mt-2">
                     <i class="ri-arrow-down-s-line plus__icon" id="pi_1"></i>
                     <i class="ri-arrow-up-s-line subtract__icon" id="si_1"></i>
-                    <span class="question__text">การฝึกอบรมความรู้ทางทฤษฎี (Theoretical Knowledge Instruction) จำนวน 1
-                        วัน </span>
+                    <span class="question__text">ภาคทฤษฎีและภาคปฏิบัติ จำนวน 4 วัน </span>
                 </div>
                 <div class="answer__block" id="ab_1">
                     <span class="answer__text">
-                        ภาคทฤษฎี/ภาคจำลอง Simulator จำนวน 1 วัน
                         <ol>
-                            <li>เกี่ยวกับการทำการบินอย่างปลอดภัย</li>
-                            <li>กฎหมายว่าด้วยอากาศยานซึ่งไม่มีนักบิน</li>
-                            <li>แผนที่ และการเดินอากาศ</li>
-                            <li>ความรู้เกี่ยวกับปฏิบัติการบินตามหลักเกณฑ์ที่กำหนด
-                                และลำดับขั้นตอนที่สำคัญทั้งก่อนและหลังปฏิบัติการบิน</li>
-                            <li>ห้วงอากาศ/อุตุนิยมวิทยาการบิน</li>
-                            <li>แผนตอบสนองต่อภาวะฉุกเฉิน</li>
-                        </ol>
-                    </span>
-                </div>
-                <div class="question__block mt-3">
-                    <i class="ri-arrow-down-s-line plus__icon" id="pi_2"></i>
-                    <i class="ri-arrow-up-s-line subtract__icon" id="si_2"></i>
-                    <span class="question__text">การฝึกภาคปฏิบัติ (Practical Training) จำนวน 1 วัน</span>
-                </div>
-                <div class="answer__block mb-5" id="ab_2">
-                    <span class="answer__text">
-                        การเตรียมการขั้นตอนปฏิบัติการบินเบื้องต้น
-                        <br>
-                        ขั้นตอนปฏิบัติในการ Pre Flight, In-Flight, Post Flight ดังนี้
-                        <ol>
-                            <li>ก่อนทำการบิน</li>
-                            <li>การวิ่งขึ้น</li>
-                            <li>การปฏิบัติการทั่วไปหรือการบังคับพื้นฐาน</li>
-                            <li>ขั้นตอนปฏิบัติกรณีฉุกเฉิน</li>
-                            <li>การประสานงานและความปลอดภัยการบิน</li>
-                            <li>การดำเนินการหลังทำการบิน</li>
+                            <li>พื้นฐานและองค์ประกอบการเป็นนักบินโดรนตรวจสอบโซล่าร์เซลล์</li>
+                            <li>ความรู้พื้นฐานอากาศยานซึ่งไม่มีนักบิน “โดรน” และสมรรถนะของโดรนในงานตรวจสอบโซล่าร์เซลล์ </li>
+                            <li>ขั้นตอนการขึ้นทะเบียน กฏระเบียบ ข้อบังคับทางกฏหมายการบินโดรน</li>
+                            <li>พื้นฐานการควบคุมบังคับการบินโดรนให้ถูกต้อง ในการตรวจสอบโซล่าร์เซลล์ </li>
+                            <li>ทฤษฎีภาพความร้อนและการนำมาใช้เพื่อตรวจสอบโซล่าร์เซลล์</li>
+                            <li>ข้อบกพร่องและเกณฑ์มาตรฐานการตรวจสอบโซล่าร์เซลล์</li>
+                            <li>กรณีศึกษาและปัญหาที่พบในการตรวจสอบโซล่าร์เซลล์</li>
+                            <li>การบำรุงรักษาอากาศยาน “โดรน” ที่ถูกต้องรวมถึงวิธีการใช้งานเครื่องมือต่างๆ ในการตรวจสอบโซล่าร์เซลล์</li>
+                            <li>ขั้นตอนปฏิบัติตามมาตรฐานการบินโดรนที่ปลอดภัยและหลักนิรภัยการบิน</li>
+                            <li>ขั้นตอนปฏิบัติและเทคนิคการบินตรวจสอบความร้อนโซล่าร์เซลล์อย่างละเอียด 
+                                *Manual Flight, Auto Flight (Waypoint Mission)
+                            </li>
+                            <li>รูปแบบและขั้นตอนการจัดทำรายงานการตรวจสอบโซล่าร์เซลล์</li>
+                            <li>สอบภาคทฤษฎี/สอบภาคปฏิบัติ (ข้อเขียน 40 ข้อ, สอบสัมภาษณ์ 1 ข้อ เกณฑ์ผ่าน 80% ขึ้นไป) </li>
                         </ol>
                     </span>
                 </div>
@@ -316,7 +299,7 @@
                         <img src="/images/correct.png" alt="correct">
                     </div>
                     <p class="advantage__first__text">
-                        ได้เรียนรู้ทฤษฎีและสามารถบังคับอากาศยานไร้คนขับอย่างปลอดภัยและถูกวิธี</p>
+                        สามารถแก้ไขปัญหา และระบุจุดปัญหาได้อย่างถูกต้อง</p>
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6">
@@ -325,8 +308,7 @@
                         <img src="/images/correct.png" alt="correct">
                     </div>
                     <div>
-                        <p class="advantage__second__text">ได้รับทราบและเข้าใจถึงกฎหมาย ระเบียบ และข้อกำหนดต่างๆ
-                            ในการบังคับอากาศยานไร้คนขับ </p>
+                        <p class="advantage__first__text">เข้าใจมาตรฐานสากล SNT-TC-1A การตรวจสอบภาพความร้อน </p>
                     </div>
 
                 </div>
@@ -337,8 +319,8 @@
                         <img src="/images/correct.png" alt="correct">
                     </div>
                     <div>
-                        <p class="advantage__third__text">
-                            มีความมั่นใจในการใช้งานเทคโนโลยีอากาศยานไร้คนขับและเครื่องมือต่างๆ เพื่อพัฒนาต่อยอดในอนาคต
+                        <p class="advantage__first__text">
+                            สามารถตีความภาพความร้อนได้ (Thermal Image Inerpretation)
                         </p>
                     </div>
                 </div>
@@ -349,8 +331,57 @@
                         <img src="/images/correct.png" alt="correct">
                     </div>
                     <div>
-                        <p class="advantage__fourth__text">ได้รับประกาศนียบัตร นักบินโดรน ขั้นพื้นฐานสำหรับผู้เริ่มต้น
-                            รุ่นที่ 1</p>
+                        <p class="advantage__fourth__text">สามารถเขียนวิธีการตรวจสอบได้ (Thermography inspection Procedure)</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-6">
+                <div class="advantage__fourth">
+                    <div>
+                        <img src="/images/correct.png" alt="correct">
+                    </div>
+                    <div>
+                        <p class="advantage__fourth__text">สามารถใช้ซอฟต์แวร์ (Software) วิเคราะห์ภาพความร้อนได้</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-6">
+                <div class="advantage__fourth">
+                    <div>
+                        <img src="/images/correct.png" alt="correct">
+                    </div>
+                    <div>
+                        <p class="advantage__fourth__text">สามารถสร้างรูปแบบรายงาน (Report) ได้ถูกต้องตามหลักสากล</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-6">
+                <div class="advantage__fourth">
+                    <div>
+                        <img src="/images/correct.png" alt="correct">
+                    </div>
+                    <div>
+                        <p class="advantage__fourth__text">สามารถบังคับอากาศยานไร้คนขับ เพื่องานตรวจสอบภาพความร้อนได้</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-6">
+                <div class="advantage__fourth">
+                    <div>
+                        <img src="/images/correct.png" alt="correct">
+                    </div>
+                    <div>
+                        <p class="advantage__fourth__text">เข้าใจการทำงานและความสามารถของโดรนและอุปกรณ์ประกอบรวม</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-6">
+                <div class="advantage__fourth">
+                    <div>
+                        <img src="/images/correct.png" alt="correct">
+                    </div>
+                    <div>
+                        <p class="advantage__fourth__text">เข้าใจกฎหมายและกฎความปลอดภัยที่เกี่ยวข้องกับโดรน</p>
                     </div>
                 </div>
             </div>
@@ -399,22 +430,24 @@
                             <img src="/images/logo_dark.png" alt="logo-dark" class="img__dark">
                         </div>
                         <div>
-                            <p class="text__white">พัทยา โดรน แอนด์ โรโบติกส์ เซ็นเตอร์ เลขที่ 362/24 หมู่ 10 ตำบลห้วยใหญ่</p>
+                            <p class="text__white">พัทยา โดรน แอนด์ โรโบติกส์ เซ็นเตอร์ เลขที่ 362/24 หมู่ 10
+                                ตำบลห้วยใหญ่</p>
                             <p class="text__white">อำเภอบางละมุง จังหวัดชลบุรี รหัสไปรษณีย์ 20150</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mb-5">
-    
+
                     <p class="white-title">
                         ช่องทางติดต่อเรา
                     </p>
-    
+
                     <div class="d-flex flex-row">
                         <div class="icon__align">
                             <img src="/images/facebook1.png" alt="facebook-icon">
                         </div>
-                        <p class="social__text me-5"><a href="https://www.facebook.com/profile.php?id=61558845597524">PDRC:
+                        <p class="social__text me-5"><a
+                                href="https://www.facebook.com/profile.php?id=61558845597524">PDRC:
                                 Pattaya Drone
                                 and Robotics Center</a></p>
                     </div>
