--- a/threed.html
+++ b/threed.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/faq.css">
     <link rel="stylesheet" href="/css/course_detail.css" />
+    <link rel="stylesheet" href="/css/threed.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Drone Project</title>
@@ -90,13 +91,13 @@
                         </li>
                         <li class="nav-link margin__left" style="--i: 1.35s;">
                             <i class="ri-shopping-cart-2-fill red-cart"></i>
-                       </li>
-                       <li class="nav-link" style="--i: 1.35s">
-                           <select class="form-select">
-                               <option selected>TH</option>
-                               <option value="1">EN</option>
-                           </select>
-                      </li>
+                        </li>
+                        <li class="nav-link" style="--i: 1.35s">
+                            <select class="form-select">
+                                <option selected>TH</option>
+                                <option value="1">EN</option>
+                            </select>
+                        </li>
                     </ul>
                 </div>
 
@@ -116,7 +117,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-8">
-                <p class="title__main">หลักสูตร นักบินโดรน ขั้นพื้นฐาน (Drone for Beginners)</p>
+                <p class="title__main">หลักสูตร นักบินโดรน LIDAR งานสำรวจและรังวัด (Drone for Surveying and Mapping with LiDAR Technology)</p>
                 <div class="d-flex flex-row">
                     <div>
                         <img src="/images/teacher.png" alt="teacher" class="mt-3 teacher__width">
@@ -128,17 +129,15 @@
                     <div class="vertical__line"></div>
                     <div class="teacher__name">
                         <p class="teacher__text" style="font-weight: 600;">Categories:</p>
-                        <p class="teacher__text">กลุ่ม ผู้เริ่มต้น (Beginners)</p>
+                        <p class="teacher__text">กลุ่ม นักบินโดรน วิชาชีพเฉพาะทาง (Specialist)</p>
                     </div>
                 </div>
                 <div class="carousel-container">
                     <div class="carousel-main">
-                        <img id="main-image" src="/images/drone__banner__2.png" alt="drone__banner" width="100%"
-                            class="mt-3">
+                        <img id="main-image" src="/images/course_4.png" alt="drone__banner" width="100%" class="mt-3">
                     </div>
                     <div class="carousel-thumbnails" id="thumbnails">
-                        <img src="/images/drone__banner__2.png" alt="thumbnail 1" class="thumbnail active"
-                            data-index="0">
+                        <img src="/images/course_4.png" alt="thumbnail 1" class="thumbnail active" data-index="0">
                         <img src="/images/equipment.jpg" alt="Thumbnail 2" class="thumbnail" data-index="1">
                         <img src="/images/equipment__2.JPG" alt="Thumbnail 3" class="thumbnail" data-index="2">
                     </div>
@@ -159,7 +158,7 @@
             </div>
             <div class="col-sm-12 col-md-12 col-lg-4">
                 <div class="price__detail">
-                    <p class="price">5,500.-</p>
+                    <p class="price">15,000.-</p>
                     <button class="register__link"><a href="#">ลงทะเบียนคอร์สนี้</a></button>
                     <button class="cart__link"><a href="#"><img src="/images/cart.png" alt="cart">&nbsp;&nbsp;
                             เพิ่มลงในตะกร้า</a></button>
@@ -172,7 +171,7 @@
                                 <span>&nbsp;&nbsp;Duration</span>
                             </div>
                             <div class="col-4 col-sm-4 col-md-4">
-                                <p class="text__align">1 day</p>
+                                <p class="text__align">3 day</p>
                             </div>
                         </div>
                         <div class="row p-2">
@@ -224,20 +223,16 @@
     <div class="overlay-container mt-5">
 
         <div class="overlay-image-text">
-            <p><strong>หลักสูตร “นักบินโดรนขั้นพื้นฐานสำหรับผู้เริ่มต้น  (Drone for
-                    Beginner)”  </strong>ได้พัฒนาระบบการเรียนการสอนมุ่งเน้นความรู้ความเข้าใจเกี่ยวกับกฎหมาย ข้อบังคับ
-                และหลักการเดินอากาศ รวมถึงการใช้ห้วงอากาศ
-                สร้างพื้นฐานความรู้ความเข้าใจที่ถูกต้องทั้งภาคทฤษฎีและภาคปฏิบัติ เพื่อให้สามารถใช้งานระบบ UAS (Unmanned
-                Aircraft System)   หรือการบินโดรน (Drone) ภายในประเทศให้มีมาตรฐานมีประสิทธิภาพการบินที่ถูกต้องตามกฎหมาย
-                มีความรู้ด้านความปลอดภัยในการบินและการบำรุงรักษาอากาศยานไร้คนขับเบื้องต้น เน้นให้มีทักษะ มีความรู้
-                ความเข้าใจในการบังคับควบคุมโดรนเบื้องต้นในท่าทางที่กำหนดตามมาตรฐานสากล
-                และดำเนินการบินตามขั้นตอนปฏิบัติพื้นฐาน อีกทั้งมีความรู้เรื่อง การใช้ห้วงอากาศ ร่วมกับผู้อื่น
-                มีความสามารถในการประเมินสภาพอากาศตามหลักอุตุนิยมวิทยาก่อนทำการบิน
-                มีการตรวจสอบตัวเองและผู้ปฏิบัติงานร่วมในด้านความพร้อมสมรรถนะร่างกายก่อนทำการบินโดรน
-                มีความระแวดระวังและการตระหนักรู้เพื่อป้องกันอันตรายจากการบินโดรน
-                มีความรู้เรื่องแผนรับมือต่อสถานการณ์ฉุกเฉินเมื่อเกิดอุบัติเหตุจากโดรน สามารถเข้าใจค่าพารามิเตอร์ของโดรน
-                และตั้งค่าได้อย่างถูกต้อง มีความเข้าใจสมรรถนะของโดรน รวมถึงเทคนิคการบินโดรนให้ปลอดภัย
-                ถูกต้องตามกฎหมายที่สำนักงานการบินพลเรือน (กพท.) กำหนดไว้</p>
+            <p><strong>หลักสูตรมุ่งเน้นเรื่อง Photogrammetry</strong>
+                เพื่อการสร้างแบบจำลองสามมิติจากภาพถ่ายด้วยโดรนและการประยุกต์ใช้ในงานวิศวกรรมมีความสำคัญและมีผลกระทบต่อการพัฒนาการดำเนินงานในสาขาวิศวกรรมต่าง ๆ ดังนี้
+                <ol>
+                    <li>เพิ่มประสิทธิภาพในการใช้เทคโนโลยีที่เกี่ยวข้องกับโดรนและภาพถ่ายทางอากาศช่วยให้วิศวกรสามารถสร้างแบบจำลองสามมิติของพื้นที่ได้อย่างรวดเร็วและแม่นยำ เพื่อการวางแผนการก่อสร้างโครงการขนาดใหญ่ ซึ่ช่วยลดความเสี่ยงและความล่าช้าในการดำเนินโครงการ</li>
+                    <li>เพิ่มความแม่นยำในการวิเคราะห์และจำลองสภาพแวดล้อมโดยการสร้างแบบจำลองสามมิติจากภาพถ่ายทางอากาศช่วยให้สามารถวิเคราะห์แนวโน้มของการเปลี่ยนแปลงทางภูมิศาสตร์</li>
+                    <li>การสนับสนุนการตัดสินใจที่ถูกต้องจากการมีข้อมูลแบบจำลองสามมิติที่มีความถูก้องและระดับความละเอียดสูงช่วยให้ผู้บริหารและวิศวกรทำการตัดสินใจในการวางแผนและดำเนินโครงการได้อย่างมั่นใจ โดยการใช้ข้อมูลที่มีคุณภาพสามารถลดความเสี่ยงและเพิ่่มประสิทธิภาพในการดำเนินงาน</li>
+                    <li>สร้างการแข่งขันในตลาดแรงงานจากการมีความรู้และทักษะในการสร้างแบบจำลองสามมิติจากภาพถ่ายด้วยโดรนและการประยุกต์ใช้ในงานวิศวกรรมและเพิ่มมูลค่าให้กับบุคลากรที่มีความชำนาญในด้านนี้</li>
+                    <li>สร้างความเข้าใจในโครงการร่วมกันจากการใช้แบบจำลองสามมิติเป็นเครื่องมือในการสื่อสารและการนำเสนอโครงการแก่ผู้เกี่ยวข้องช่วยให้ทุกคนเข้าใจและมีความเชื่อมั่นในการดำเนินโครงการร่วมกันอย่างมีประสิทธิภาพ</li>
+                </ol>
+            </p>
         </div>
     </div>
     <div class="detail">
@@ -247,14 +242,15 @@
                 <div class="col-md-12 course__text__2">คอร์สนี้เหมาะกับใคร</div>
                 <div class="col-md-12">
                     <ul class="unorder">
-                        <li>บุคคลทั่วไป ชาย/หญิง อายุ 18 ปี ขึ้นไป</li>
+                        <li>บุคคลทั่วไปที่มีอายุตั้งแต่ 18 ปี ขึ้นไป</li>
                         <li>สุขภาพกายและสุขภาพจิตดี / ต้องไม่เป็นผู้ตาบอดสี</li>
                     </ul>
                 </div>
                 <div class="col-md-12 course__text__2">โดรนที่ใช้ในการสอน</div>
                 <div class="col-md-12">
                     <ul class="unorder">
-                        <li>DJI Mavic 3 Enterprise</li>
+                        <li>DJI Matrice 350 RTK + DJI Zenmuse P1</li>
+                        <li>DJI Mavic 3E with RTK Module + D-RTK2</li>
                     </ul>
                 </div>
             </div>
@@ -267,40 +263,42 @@
                 <div class="question__block mt-2">
                     <i class="ri-arrow-down-s-line plus__icon" id="pi_1"></i>
                     <i class="ri-arrow-up-s-line subtract__icon" id="si_1"></i>
-                    <span class="question__text">การฝึกอบรมความรู้ทางทฤษฎี (Theoretical Knowledge Instruction) จำนวน 1
-                        วัน </span>
+                    <span class="question__text">การฝึกอบรมความรู้ทางทฤษฎี (Theoretical Knowledge Instruction) จำนวน 1 วัน จำนวน 5 บท
+                         </span>
                 </div>
                 <div class="answer__block" id="ab_1">
                     <span class="answer__text">
-                        ภาคทฤษฎี/ภาคจำลอง Simulator จำนวน 1 วัน
                         <ol>
-                            <li>เกี่ยวกับการทำการบินอย่างปลอดภัย</li>
-                            <li>กฎหมายว่าด้วยอากาศยานซึ่งไม่มีนักบิน</li>
-                            <li>แผนที่ และการเดินอากาศ</li>
-                            <li>ความรู้เกี่ยวกับปฏิบัติการบินตามหลักเกณฑ์ที่กำหนด
-                                และลำดับขั้นตอนที่สำคัญทั้งก่อนและหลังปฏิบัติการบิน</li>
-                            <li>ห้วงอากาศ/อุตุนิยมวิทยาการบิน</li>
-                            <li>แผนตอบสนองต่อภาวะฉุกเฉิน</li>
+                            <li>พื้นฐานเกี่ยวกับโดรนและภาพถ่ายทางอากาศ</li>
+                            <li>พื้นฐานเกี่ยวกับเทคโนโลยี Photogrammetry และการสร้างแบบจำลองสามมิติ (3D) </li>
+                            <li>มาตรฐานการสำรวจด้วยอากาศยานไร้คนขับและกฎหมาย</li>
+                            <li>ฝึกปฏิบัติการสำรวจเก็บข้อมูลภาพถ่ายทางอากาศ</li>
+                            <li>ห้วงอากาศ</li>
                         </ol>
                     </span>
                 </div>
-                <div class="question__block mt-3">
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-12">
+                <div class="question__block mt-2">
                     <i class="ri-arrow-down-s-line plus__icon" id="pi_2"></i>
                     <i class="ri-arrow-up-s-line subtract__icon" id="si_2"></i>
-                    <span class="question__text">การฝึกภาคปฏิบัติ (Practical Training) จำนวน 1 วัน</span>
+                    <span class="question__text">การฝึกภาคปฏิบัติ (Practical Training) จำนวน 2 วัน จำนวน 8 บท </span>
                 </div>
-                <div class="answer__block mb-5" id="ab_2">
+                <div class="answer__block" id="ab_2">
                     <span class="answer__text">
-                        การเตรียมการขั้นตอนปฏิบัติการบินเบื้องต้น
-                        <br>
-                        ขั้นตอนปฏิบัติในการ Pre Flight, In-Flight, Post Flight ดังนี้
+                        <p> <strong>วันที่ 2</strong></p>
                         <ol>
-                            <li>ก่อนทำการบิน</li>
-                            <li>การวิ่งขึ้น</li>
-                            <li>การปฏิบัติการทั่วไปหรือการบังคับพื้นฐาน</li>
-                            <li>ขั้นตอนปฏิบัติกรณีฉุกเฉิน</li>
-                            <li>การประสานงานและความปลอดภัยการบิน</li>
-                            <li>การดำเนินการหลังทำการบิน</li>
+                            <li>ทบทวนขั้นตอนปฏิบัติการบินเบื้องต้น</li>
+                            <li>ฝึกปฏิบัติการสำรวจเก็บข้อมูลภาพถ่ายทางอากาศตามพื้นที่ที่กำหนด (Area #1) </li>
+                            <li>ฝึกปฏิบัติการสำรวจเก็บข้อมูลภาคสนาม</li>
+                            <li>ฝึกปฏิบัติการใช้โปรแกรม (ซอฟต์แวร์) และเครื่องมือในการประมวลผลภาพถ่าย</li>
+                        </ol>
+                        <p> <strong>วันที่ 3</strong></p>
+                        <ol>
+                            <li>ฝึกปฏิบัติการสำรวจเก็บข้อมูลภาพถ่ายทางอากาศตามพื้นที่ที่กำหนด (Area #2)</li>
+                            <li>ฝึกปฏิบัติการสำรวจเก็บข้อมูลภาคสนาม </li>
+                            <li>ฝึกปฏิบัติการใช้โปรแกรม (ซอฟต์แวร์) และเครื่องมือในการประมวลผลภาพถ่าย</li>
+                            <li>การรวมกลุ่มนำเสนอผลงานการสำรวจ</li>
                         </ol>
                     </span>
                 </div>
@@ -325,8 +323,7 @@
                         <img src="/images/correct.png" alt="correct">
                     </div>
                     <div>
-                        <p class="advantage__second__text">ได้รับทราบและเข้าใจถึงกฎหมาย ระเบียบ และข้อกำหนดต่างๆ
-                            ในการบังคับอากาศยานไร้คนขับ </p>
+                        <p class="advantage__first__text">ได้รับทราบและเข้าใจถึงกฎหมาย ระเบียบ และข้อกำหนดต่าง ๆ ในการบังคับอากาศยานไร้คนขับ </p>
                     </div>
 
                 </div>
@@ -337,8 +334,8 @@
                         <img src="/images/correct.png" alt="correct">
                     </div>
                     <div>
-                        <p class="advantage__third__text">
-                            มีความมั่นใจในการใช้งานเทคโนโลยีอากาศยานไร้คนขับและเครื่องมือต่างๆ เพื่อพัฒนาต่อยอดในอนาคต
+                        <p class="advantage__first__text">
+                            ได้เข้าใจหลักการพื้นฐาน Photogrammetry และเทคโนโลยีโดรนในการถ่ายภาพทางอากาศเพื่อสร้างแบบจำลองสามมิติจากภาพถ่ายและการประยุกต์ใช้ในงานวิศวกรรม
                         </p>
                     </div>
                 </div>
@@ -349,8 +346,47 @@
                         <img src="/images/correct.png" alt="correct">
                     </div>
                     <div>
-                        <p class="advantage__fourth__text">ได้รับประกาศนียบัตร นักบินโดรน ขั้นพื้นฐานสำหรับผู้เริ่มต้น
-                            รุ่นที่ 1</p>
+                        <p class="advantage__fourth__text">ได้รับการฝึกทักษะในการใช้เครื่องมือและโปรแกรมที่ใช้ในการสร้างแบบจำลอง และการประยุกต์ใช้โดรนในการเก็บข้อมูลและสร้างแบบจำลองสามมิติจากข้อมูลทางอากาศ</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-6">
+                <div class="advantage__fourth">
+                    <div>
+                        <img src="/images/correct.png" alt="correct">
+                    </div>
+                    <div>
+                        <p class="advantage__fourth__text">ได้เข้าใจวิธีการวิเคราะห์และประมวลผลข้อมูลที่ได้รับจากการถ่ายภาพทางอากาศ เพื่อให้สามารถสร้างแบบจำลองสามมิติที่มีความแม่นยำและมีประสิทธิภาพ</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-6">
+                <div class="advantage__fourth">
+                    <div>
+                        <img src="/images/correct.png" alt="correct">
+                    </div>
+                    <div>
+                        <p class="advantage__fourth__text">ได้ฝึกทักษะในการแก้ไขปัญหาที่อาจเกิดขึ้นในการใช้งานจริง และการปรับปรุงแก้ไขข้อบกพร่องในแบบจำลอง</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-6">
+                <div class="advantage__fourth">
+                    <div>
+                        <img src="/images/correct.png" alt="correct">
+                    </div>
+                    <div>
+                        <p class="advantage__fourth__text">ได้รับความมั่นใจในการใช้งานเทคโนโลยีและเครื่องมือต่างๆ ที่ได้รับการอบรม เพื่อสร้างแบบจำลองและดำเนินงานวิศวกรรมในอุตสาหกรรมได้อย่างมั่นใจ</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-12 col-lg-6">
+                <div class="advantage__fourth">
+                    <div>
+                        <img src="/images/correct.png" alt="correct">
+                    </div>
+                    <div>
+                        <p class="advantage__fourth__text">ได้รับประกาศนียบัตร นักบินโดรน สร้างแบบจําลอง 3 มิติ ภาพถ่ายความละเอียดสูง รุ่นที่ 1</p>
                     </div>
                 </div>
             </div>
@@ -399,22 +435,24 @@
                             <img src="/images/logo_dark.png" alt="logo-dark" class="img__dark">
                         </div>
                         <div>
-                            <p class="text__white">พัทยา โดรน แอนด์ โรโบติกส์ เซ็นเตอร์ เลขที่ 362/24 หมู่ 10 ตำบลห้วยใหญ่</p>
+                            <p class="text__white">พัทยา โดรน แอนด์ โรโบติกส์ เซ็นเตอร์ เลขที่ 362/24 หมู่ 10
+                                ตำบลห้วยใหญ่</p>
                             <p class="text__white">อำเภอบางละมุง จังหวัดชลบุรี รหัสไปรษณีย์ 20150</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mb-5">
-    
+
                     <p class="white-title">
                         ช่องทางติดต่อเรา
                     </p>
-    
+
                     <div class="d-flex flex-row">
                         <div class="icon__align">
                             <img src="/images/facebook1.png" alt="facebook-icon">
                         </div>
-                        <p class="social__text me-5"><a href="https://www.facebook.com/profile.php?id=61558845597524">PDRC:
+                        <p class="social__text me-5"><a
+                                href="https://www.facebook.com/profile.php?id=61558845597524">PDRC:
                                 Pattaya Drone
                                 and Robotics Center</a></p>
                     </div>
