--- a/course.html
+++ b/course.html
@@ -529,7 +529,7 @@
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">รายละเอียดคอร์ส</a> 
+                               <a href="infrared_level1.html">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
