--- a/infrared_level1.html
+++ b/infrared_level1.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,12 +9,11 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/faq.css">
     <link rel="stylesheet" href="/css/course_detail.css" />
-    <link rel="stylesheet" href="/css/threed.css">
+    <link rel="stylesheet" href="/css/infrared_level1.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Drone Project</title>
 </head>
-
 <body>
     <header>
         <div class="container-custom">
@@ -117,7 +115,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-8">
-                <p class="title__main">หลักสูตร นักบินโดรน สร้างภาพ 3 มิติ (Drone 3D Modeling Photogrammetry)</p>
+                <p class="title__main">หลักสูตร ผู้ตรวจภาพความร้อน ระดับ 1 (Certify Level 1 Infrared Thermography)</p>
                 <div class="d-flex flex-row">
                     <div>
                         <img src="/images/teacher.png" alt="teacher" class="mt-3 teacher__width">
@@ -129,7 +127,7 @@
                     <div class="vertical__line"></div>
                     <div class="teacher__name">
                         <p class="teacher__text" style="font-weight: 600;">Categories:</p>
-                        <p class="teacher__text">กลุ่ม นักบินโดรน วิชาชีพเฉพาะทาง (Specialist)</p>
+                        <p class="teacher__text">กลุ่ม ผู้ตรวจสอบ (Certificate)</p>
                     </div>
                 </div>
                 <div class="carousel-container">
@@ -158,7 +156,7 @@
             </div>
             <div class="col-sm-12 col-md-12 col-lg-4">
                 <div class="price__detail">
-                    <p class="price">15,000.-</p>
+                    <p class="price">25,000.-</p>
                     <button class="register__link"><a href="#">ลงทะเบียนคอร์สนี้</a></button>
                     <button class="cart__link"><a href="#"><img src="/images/cart.png" alt="cart">&nbsp;&nbsp;
                             เพิ่มลงในตะกร้า</a></button>
@@ -171,7 +169,7 @@
                                 <span>&nbsp;&nbsp;Duration</span>
                             </div>
                             <div class="col-4 col-sm-4 col-md-4">
-                                <p class="text__align">3 day</p>
+                                <p class="text__align">4 day</p>
                             </div>
                         </div>
                         <div class="row p-2">
@@ -223,15 +221,8 @@
     <div class="overlay-container mt-5">
 
         <div class="overlay-image-text">
-            <p><strong>หลักสูตรมุ่งเน้นเรื่อง Photogrammetry</strong>
-                เพื่อการสร้างแบบจำลองสามมิติจากภาพถ่ายด้วยโดรนและการประยุกต์ใช้ในงานวิศวกรรมมีความสำคัญและมีผลกระทบต่อการพัฒนาการดำเนินงานในสาขาวิศวกรรมต่าง ๆ ดังนี้
-                <ol>
-                    <li>เพิ่มประสิทธิภาพในการใช้เทคโนโลยีที่เกี่ยวข้องกับโดรนและภาพถ่ายทางอากาศช่วยให้วิศวกรสามารถสร้างแบบจำลองสามมิติของพื้นที่ได้อย่างรวดเร็วและแม่นยำ เพื่อการวางแผนการก่อสร้างโครงการขนาดใหญ่ ซึ่ช่วยลดความเสี่ยงและความล่าช้าในการดำเนินโครงการ</li>
-                    <li>เพิ่มความแม่นยำในการวิเคราะห์และจำลองสภาพแวดล้อมโดยการสร้างแบบจำลองสามมิติจากภาพถ่ายทางอากาศช่วยให้สามารถวิเคราะห์แนวโน้มของการเปลี่ยนแปลงทางภูมิศาสตร์</li>
-                    <li>การสนับสนุนการตัดสินใจที่ถูกต้องจากการมีข้อมูลแบบจำลองสามมิติที่มีความถูก้องและระดับความละเอียดสูงช่วยให้ผู้บริหารและวิศวกรทำการตัดสินใจในการวางแผนและดำเนินโครงการได้อย่างมั่นใจ โดยการใช้ข้อมูลที่มีคุณภาพสามารถลดความเสี่ยงและเพิ่่มประสิทธิภาพในการดำเนินงาน</li>
-                    <li>สร้างการแข่งขันในตลาดแรงงานจากการมีความรู้และทักษะในการสร้างแบบจำลองสามมิติจากภาพถ่ายด้วยโดรนและการประยุกต์ใช้ในงานวิศวกรรมและเพิ่มมูลค่าให้กับบุคลากรที่มีความชำนาญในด้านนี้</li>
-                    <li>สร้างความเข้าใจในโครงการร่วมกันจากการใช้แบบจำลองสามมิติเป็นเครื่องมือในการสื่อสารและการนำเสนอโครงการแก่ผู้เกี่ยวข้องช่วยให้ทุกคนเข้าใจและมีความเชื่อมั่นในการดำเนินโครงการร่วมกันอย่างมีประสิทธิภาพ</li>
-                </ol>
+            <p>หลักสูตร <strong>"ผู้เชี่ยวชาญภาพความร้อน ระดับ 1 (Level I Infrared Thermographer)</strong>
+                เพื่อให้เข้าใจหลักการที่ถูกต้องในวิธีการตรวจสอบตามมาตรฐานหลักสูตร SNT-TC-1A การทดสอบแบบไม่ทำลาย (Non-Destructive Testing, NDT) แห่งสหรัฐอเมริกา (The American Society For Non Destructive Testing, ASNT) โดยผู้ที่ได้รับการผ่านอบรมจะได้รับความรู้ มีทักษะความำนาญในการปฏิบัติงานได้อย่างมืออาชีพ สามารถใช้งานกล้องถ่ายภาพความร้อนได้อย่างถูกต้องและมีเกณฑ์ตัดสินใจข้อบกพร่องที่ตรวจพบตรงตามเกณฑ์มาตรฐานสากล ซึ่งการฝึกอบรมในครั้งนี้จะได้รับการถ่ายทอดจากผู้มีประสบการณ์ตรง ไม่ใช่พื้นฐานการทำงาน แต่รวมไปถึงประเด็นสำคัญของคุณสมบัติเฉพาะของอุปกรณ์ให้ใช้งานได้เกิดประสิทธิภาพสูงสุด ได้เรียนรู้ เทคนิคการใช้งานและขั้นตอนการทำรายงานที่ถูกต้อง น่าเชื่อถือ ที่จะนำไปใช้ร่วมกับแผนการบำรุงรักษาเชิงพยากรณ์ (Predictive Maintenance) ได้อย่างมีประสิทธิภาพ
             </p>
         </div>
     </div>
@@ -242,15 +233,16 @@
                 <div class="col-md-12 course__text__2">คอร์สนี้เหมาะกับใคร</div>
                 <div class="col-md-12">
                     <ul class="unorder">
-                        <li>บุคคลทั่วไปที่มีอายุตั้งแต่ 18 ปี ขึ้นไป</li>
-                        <li>สุขภาพกายและสุขภาพจิตดี / ต้องไม่เป็นผู้ตาบอดสี</li>
+                        <li>วิศวกร / สถาปนิก / ช่างเทคนิค</li>
+                        <li>ผู้รับเหมาก่อสร้าง / ผู้ทำงานเกี่ยวกับการตรวจสอบอาคารทั่วไป</li>
+                        <li>เจ้าหน้าที่ตรวจสอบความปลอดภัย (จป. วิชาชีพ)</li>
+                        <li>อื่น ๆ (นักศึกษา นักวิชาการ บุคคลทั่วไป)</li>
                     </ul>
                 </div>
                 <div class="col-md-12 course__text__2">โดรนที่ใช้ในการสอน</div>
                 <div class="col-md-12">
                     <ul class="unorder">
-                        <li>DJI Matrice 350 RTK + DJI Zenmuse P1</li>
-                        <li>DJI Mavic 3E with RTK Module + D-RTK2</li>
+                        <li>กล้องถ่ายภาพความร้อน FLUKE, Guide Sensmart</li>
                     </ul>
                 </div>
             </div>
@@ -263,42 +255,53 @@
                 <div class="question__block mt-2">
                     <i class="ri-arrow-down-s-line plus__icon" id="pi_1"></i>
                     <i class="ri-arrow-up-s-line subtract__icon" id="si_1"></i>
-                    <span class="question__text">การฝึกอบรมความรู้ทางทฤษฎี (Theoretical Knowledge Instruction) จำนวน 1 วัน จำนวน 5 บท
+                    <span class="question__text">ภาคทฤษฎีและภาคปฏิบัติ จำนวน 4 วัน
                          </span>
                 </div>
                 <div class="answer__block" id="ab_1">
                     <span class="answer__text">
+                        <p><strong>วันที่ 1</strong></p>
                         <ol>
-                            <li>พื้นฐานเกี่ยวกับโดรนและภาพถ่ายทางอากาศ</li>
-                            <li>พื้นฐานเกี่ยวกับเทคโนโลยี Photogrammetry และการสร้างแบบจำลองสามมิติ (3D) </li>
-                            <li>มาตรฐานการสำรวจด้วยอากาศยานไร้คนขับและกฎหมาย</li>
-                            <li>ฝึกปฏิบัติการสำรวจเก็บข้อมูลภาพถ่ายทางอากาศ</li>
-                            <li>ห้วงอากาศ</li>
+                            <li>การวัดอุณหภูมิ </li>
+                            <li>พื้นฐานฟิสิกส์ทางความร้อน </li>
+                            <li>ความร้อนและทฎษฎีการถ่ายเทความร้อน</li>
                         </ol>
-                    </span>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-12">
-                <div class="question__block mt-2">
-                    <i class="ri-arrow-down-s-line plus__icon" id="pi_2"></i>
-                    <i class="ri-arrow-up-s-line subtract__icon" id="si_2"></i>
-                    <span class="question__text">การฝึกภาคปฏิบัติ (Practical Training) จำนวน 2 วัน จำนวน 8 บท </span>
-                </div>
-                <div class="answer__block" id="ab_2">
-                    <span class="answer__text">
-                        <p> <strong>วันที่ 2</strong></p>
+                        <p><strong>วันที่ 2</strong></p>
                         <ol>
-                            <li>ทบทวนขั้นตอนปฏิบัติการบินเบื้องต้น</li>
-                            <li>ฝึกปฏิบัติการสำรวจเก็บข้อมูลภาพถ่ายทางอากาศตามพื้นที่ที่กำหนด (Area #1) </li>
-                            <li>ฝึกปฏิบัติการสำรวจเก็บข้อมูลภาคสนาม</li>
-                            <li>ฝึกปฏิบัติการใช้โปรแกรม (ซอฟต์แวร์) และเครื่องมือในการประมวลผลภาพถ่าย</li>
+                            <li>ทฎษฎีการแผ่รังสีความร้อน </li>
+                            <li>คุณลักษณะการแผ่รังสีความร้อน (Radiosity) </li>
                         </ol>
-                        <p> <strong>วันที่ 3</strong></p>
+                        <p><strong>วันที่ 3</strong></p>
                         <ol>
-                            <li>ฝึกปฏิบัติการสำรวจเก็บข้อมูลภาพถ่ายทางอากาศตามพื้นที่ที่กำหนด (Area #2)</li>
-                            <li>ฝึกปฏิบัติการสำรวจเก็บข้อมูลภาคสนาม </li>
-                            <li>ฝึกปฏิบัติการใช้โปรแกรม (ซอฟต์แวร์) และเครื่องมือในการประมวลผลภาพถ่าย</li>
-                            <li>การรวมกลุ่มนำเสนอผลงานการสำรวจ</li>
+                            <li>ทบทวนทฤษฎีการถ่ายภาพความร้อน </li>
+                            <li>ทดลองผลกระทบของผิวและสีด้วยกล้องถ่ายภาพความร้อน (แบบจำลอง)</li>
+                            <li>ภาพความร้อนและการตีความหมาย</li>
+                            <li>ปัจจัยที่มีผลต่อความผิดพลาดในการวัดค่าอุณหภูมิ</li>
+                            <li>ผลกระทบจากคุณสมบัติของวัสดุจาก Emissivity และ Reflectivity</li>
+                            <li>ผลกระทบเนื่องจากระยะทาง</li>
+                            <li>Field of View (FOV)</li>
+                            <li>Instantaneous Field of View (IFOV)</li>
+                            <li>Measurement Field of View (MFOV)</li>
+                            <li>Distance to Spot Ration (D/S)</li>
+                            <li>ผลกระทบการเลือกขนาดเลนซ์ต่อค่าความถูกต้องการวัดอุณหภูมิ</li>
+                            <li>นำเสนอการทดสอบหาค่า Emissivity ของวัสดุต่างๆ</li>
+                            <li>การเลือกใช้งานกล้องภาพความร้อนให้เหาะสมกับงาน</li>
+                            <li>การประยุกต์ใช้กล้องถ่ายภาพความร้อน </li>
+                            <li>การตรวจสอบระบบไฟฟ้า</li>
+                            <li>การตรวจสอบระบบเครื่องกล</li>
+                            <li>ตัวอย่างการประยุกต์ใช้ในการการตรวจสอบด้านอุตสาหกรรมต่างๆ </li>
+                        </ol>
+                        <p><strong>วันที่ 4</strong></p>
+                        <ol>
+                            <li>ทดสอบการวัด ตามหลักการนำความร้อนด้วยกล้องถ่ายภาพความร้อน  </li>
+                            <li>ทดสอบการวัดตามหลักการพาความร้อนด้วยกล้องถ่ายภาพความร้อน</li>
+                            <li>ทดสอบผลกระทบของคุณสมบัติการแผ่และการสะท้อนรังสีความร้อนด้วยกล้องถ่ายภาพความร้อน </li>
+                            <li>ทดสอบการปรับภาพ (Optical Focus, Thermal Focus, Level, Span Brightness, Contrast) </li>
+                            <li>ทดสอบการวัดรังสีความร้อนที่ผ่จากแหล่งกำเนิดความร้อนมาตรฐาน (Infrared Calibrator)</li>
+                            <li>ทดสอบผลกระทบของการปรับระยะห่างต่อความถูกต้องการวัดอุณหภูมิ </li>
+                            <li>ทดสอบการเคลื่อนที่ของรังสีความร้อนผ่านชั้นบรรยากาศ</li>
+                            <li>นำเสนอรูปแบบรายงานและขั้นตอนการเขียนรายงานการตรวจสอบด้วยกล้องภาพความร้อนตามมาตรฐานสากล</li>
+                            <li>สอบข้อเขียน (50 ข้อ)</li>
                         </ol>
                     </span>
                 </div>
@@ -308,88 +311,16 @@
     <div class="container advantage__margin__align">
         <p class="advantage">สิ่งที่จะได้รับจากคอร์สเรียนนี้</p>
         <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-6">
+            <div class="col-sm-12 col-md-12 col-lg-12">
                 <div class="advantage__first">
                     <div>
-                        <img src="/images/correct.png" alt="correct">
+                        <img src="/images/correct.png" alt="correct" class="correct">
                     </div>
                     <p class="advantage__first__text">
-                        ได้เรียนรู้ทฤษฎีและสามารถบังคับอากาศยานไร้คนขับอย่างปลอดภัยและถูกวิธี</p>
+                        สามารถนำใบรับรองประกาศนียบัตร “ผู้เชี่ยวชาญภาพความร้อน ระดับ 1” ไปใช้รับรองรายงานผลการตรวจสอบได้ ซึ่งใบรับรองจะแสดงถึงความเข้าใจการใช้งานกล้องภาพความร้อนที่ถูกต้อง เข้าใจข้อบกพร่องที่ตรวจพบ วิเคราะห์ และตัดสินได้ถูกต้องตามหลักวิชาการ มีรูปแบบรายงานที่ถูกต้อง ครบถ้วนสมบูรณ์ตามหลักมาตรฐานสากล ร่วมถึงการยกระดับความปลอดภัยและการบำรุงรักษาเชิงคาดการณ์ (Predictive) ได้อย่างถูกต้องแม่นยำ</p>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-6">
-                <div class="advantage__second">
-                    <div>
-                        <img src="/images/correct.png" alt="correct">
-                    </div>
-                    <div>
-                        <p class="advantage__first__text">ได้รับทราบและเข้าใจถึงกฎหมาย ระเบียบ และข้อกำหนดต่าง ๆ ในการบังคับอากาศยานไร้คนขับ </p>
-                    </div>
-
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-6">
-                <div class="advantage__third">
-                    <div>
-                        <img src="/images/correct.png" alt="correct">
-                    </div>
-                    <div>
-                        <p class="advantage__first__text">
-                            ได้เข้าใจหลักการพื้นฐาน Photogrammetry และเทคโนโลยีโดรนในการถ่ายภาพทางอากาศเพื่อสร้างแบบจำลองสามมิติจากภาพถ่ายและการประยุกต์ใช้ในงานวิศวกรรม
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-6">
-                <div class="advantage__fourth">
-                    <div>
-                        <img src="/images/correct.png" alt="correct">
-                    </div>
-                    <div>
-                        <p class="advantage__fourth__text">ได้รับการฝึกทักษะในการใช้เครื่องมือและโปรแกรมที่ใช้ในการสร้างแบบจำลอง และการประยุกต์ใช้โดรนในการเก็บข้อมูลและสร้างแบบจำลองสามมิติจากข้อมูลทางอากาศ</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-6">
-                <div class="advantage__fourth">
-                    <div>
-                        <img src="/images/correct.png" alt="correct">
-                    </div>
-                    <div>
-                        <p class="advantage__fourth__text">ได้เข้าใจวิธีการวิเคราะห์และประมวลผลข้อมูลที่ได้รับจากการถ่ายภาพทางอากาศ เพื่อให้สามารถสร้างแบบจำลองสามมิติที่มีความแม่นยำและมีประสิทธิภาพ</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-6">
-                <div class="advantage__fourth">
-                    <div>
-                        <img src="/images/correct.png" alt="correct">
-                    </div>
-                    <div>
-                        <p class="advantage__fourth__text">ได้ฝึกทักษะในการแก้ไขปัญหาที่อาจเกิดขึ้นในการใช้งานจริง และการปรับปรุงแก้ไขข้อบกพร่องในแบบจำลอง</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-6">
-                <div class="advantage__fourth">
-                    <div>
-                        <img src="/images/correct.png" alt="correct">
-                    </div>
-                    <div>
-                        <p class="advantage__fourth__text">ได้รับความมั่นใจในการใช้งานเทคโนโลยีและเครื่องมือต่างๆ ที่ได้รับการอบรม เพื่อสร้างแบบจำลองและดำเนินงานวิศวกรรมในอุตสาหกรรมได้อย่างมั่นใจ</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-6">
-                <div class="advantage__fourth">
-                    <div>
-                        <img src="/images/correct.png" alt="correct">
-                    </div>
-                    <div>
-                        <p class="advantage__fourth__text">ได้รับประกาศนียบัตร นักบินโดรน สร้างแบบจําลอง 3 มิติ ภาพถ่ายความละเอียดสูง รุ่นที่ 1</p>
-                    </div>
-                </div>
-            </div>
+           
         </div>
     </div>
     <img src="/images/organization.png" alt="organization" width="100%">
@@ -508,5 +439,4 @@
     <script src="/js/faq.js"></script>
     <script src="/js/script.js"></script>
 </body>
-
 </html>
