succes course-detail

--- a/course.html
+++ b/course.html
@@ -549,12 +549,12 @@
                     <div class="d-flex-align gap-2">
                         <div class="flex__price__button">
                             <div class="price__button">
-                                25,000.-
+                                85,000.-
                             </div>
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">รายละเอียดคอร์ส</a> 
+                               <a href="infrared_level2.html">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
@@ -574,12 +574,12 @@
                     <div class="d-flex-align gap-2">
                         <div class="flex__price__button">
                             <div class="price__button">
-                                25,000.-
+                                89,000.-
                             </div>
                         </div>
                         <div class="flex__course__detail__button">
                             <div class="course__detail__button">
-                               <a href="#">รายละเอียดคอร์ส</a> 
+                               <a href="infrared_level3.html">รายละเอียดคอร์ส</a> 
                             </div>
                         </div>
                         <div class="flex__register__button">
