--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                 <div class="nav-links">
                     <ul>
                         <li class="nav-link" style="--i: .6s">
-                            <a href="index.html">Home</a>
+                            <a href="index.html" class="active">Home</a>
                         </li>
                         <li class="nav-link" style="--i: .85s">
                             <a href="#">Course</a>
@@ -79,7 +79,20 @@
                             </div>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
-                            <a href="about.html" class="active">About Us</a>
+                            <a href="#" class="active">About Us</a>
+                            <div class="dropdown-2">
+                                <ul>
+                                    <li class="dropdown-link">
+                                        <a href="about.html"  class="active"><img src="/images/reactangle.png"
+                                                alt="rectangle" width="10" class="rectangle__image"> ประวัติบริษัท</a>
+                                    </li>
+                                    <li class="dropdown-link">
+                                        <a href="teachers.html" id="teacher__link"><img
+                                                src="/images/reactangle.png" alt="rectangle" width="10"
+                                                class="rectangle__image">ประวัติครูผู้สอน </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
                             <a href="contact.html">Contact Us</a>
@@ -89,13 +102,13 @@
                         </li>
                         <li class="nav-link margin__left" style="--i: 1.35s;">
                             <i class="ri-shopping-cart-2-fill red-cart"></i>
-                       </li>
-                       <li class="nav-link" style="--i: 1.35s">
-                           <select class="form-select">
-                               <option selected>TH</option>
-                               <option value="1">EN</option>
-                           </select>
-                      </li>
+                        </li>
+                        <li class="nav-link" style="--i: 1.35s">
+                            <select class="form-select">
+                                <option selected>TH</option>
+                                <option value="1">EN</option>
+                            </select>
+                        </li>
                     </ul>
                 </div>
 
