--- a/playlist_drone_mapping_talk_4.html
+++ b/playlist_drone_mapping_talk_4.html
@@ -81,7 +81,20 @@
                             </div>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
-                            <a href="about.html">About Us</a>
+                            <a href="#">About Us</a>
+                            <div class="dropdown-2">
+                                <ul>
+                                    <li class="dropdown-link">
+                                        <a href="about.html"  class="active"><img src="/images/reactangle.png"
+                                                alt="rectangle" width="10" class="rectangle__image"> ประวัติบริษัท</a>
+                                    </li>
+                                    <li class="dropdown-link">
+                                        <a href="teachers.html" id="teacher__link"><img
+                                                src="/images/reactangle.png" alt="rectangle" width="10"
+                                                class="rectangle__image">ประวัติครูผู้สอน </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
                             <a href="contact.html">Contact Us</a>
